# featmap

./: .gitignore  AGENTS.md  LICENSE  MAP.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/featmap/: __init__.py  cli.py  gitutils.py  initializer.py  links.py  parser.py  validator.py
src/featmap/templates/: MAP.template.md  agents_rules.md  bootstrap_prompt.md  pre-commit
tests/: conftest.py  test_init.py  test_links.py  test_parser.py  test_validator.py
